--- a/initial/eureka-client/build.gradle
+++ b/initial/eureka-client/build.gradle
@@ -1,13 +1,12 @@
 buildscript {
 	ext {
-		springBootVersion = '1.2.8.RELEASE'
+		springBootVersion = '1.4.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath('io.spring.gradle:dependency-management-plugin:0.5.4.RELEASE')
 	}
 }
 
@@ -15,7 +14,6 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
-apply plugin: 'io.spring.dependency-management'
 
 jar {
 	baseName = 'eureka-client'
@@ -28,18 +26,16 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.SR4'
+	}
+}
 
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
 	compile('org.springframework.boot:spring-boot-starter-web')
 }
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Angel.SR4"
-	}
-}
-
 
 eclipse {
 	classpath {
