--- a/initial/eureka-service/build.gradle
+++ b/initial/eureka-service/build.gradle
@@ -1,13 +1,12 @@
 buildscript {
 	ext {
-		springBootVersion = '1.2.8.RELEASE'
+		springBootVersion = '1.4.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath('io.spring.gradle:dependency-management-plugin:0.5.4.RELEASE')
 	}
 }
 
@@ -15,7 +14,6 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
-apply plugin: 'io.spring.dependency-management'
 
 jar {
 	baseName = 'eureka-service'
@@ -29,15 +27,15 @@ repositories {
 }
 
 
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.SR4'
+	}
+}
+
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-eureka-server')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Angel.SR4"
-	}
 }
 
 
