--- a/initial/eureka-client/gradle/wrapper/gradle-wrapper.properties
+++ b/initial/eureka-client/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Jan 14 16:29:20 CST 2016
+#Mon Aug 29 13:09:05 CDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.9-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.13-bin.zip
