--- a/complete/eureka-client/build.gradle
+++ b/complete/eureka-client/build.gradle
@@ -28,13 +28,15 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.SR4'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.SR5'
 	}
 }
 
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.cloud:spring-cloud-starter-eureka-server')
 }
 
 eclipse {
