--- a/complete/eureka-client/build.gradle
+++ b/complete/eureka-client/build.gradle
@@ -28,7 +28,7 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.SR5'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Dalston.BUILD-SNAPSHOT'
 	}
 }
 
@@ -37,6 +37,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.cloud:spring-cloud-starter-eureka-server')
+}
+
+repositories {
+	maven { url 'https://repo.spring.io/libs-snapshot' }
 }
 
 eclipse {
