--- a/complete/eureka-service/build.gradle
+++ b/complete/eureka-service/build.gradle
@@ -29,7 +29,7 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.SR5'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Dalston.BUILD-SNAPSHOT'
 	}
 }
 
@@ -38,6 +38,9 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
+repositories {
+	maven { url 'https://repo.spring.io/libs-snapshot' }
+}
 
 eclipse {
 	classpath {
