Move to Camden.SR4

--- a/initial/eureka-client/build.gradle
+++ b/initial/eureka-client/build.gradle
@@ -28,7 +28,7 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.SR5'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR4'
 	}
 }
 
