Upgrade to Spring Cloud Edgeware.RELEASE

--- a/complete/eureka-service/build.gradle
+++ b/complete/eureka-service/build.gradle
@@ -29,7 +29,7 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR5'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Edgware.RELEASE'
 	}
 }
 
