--- a/initial/eureka-client/build.gradle
+++ b/initial/eureka-client/build.gradle
@@ -28,7 +28,7 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Edgware.RELEASE'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Edgware.SR2'
 	}
 }
 
