--- a/initial/eureka-service/build.gradle
+++ b/initial/eureka-service/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.1.RELEASE'
+		springBootVersion = '2.0.2.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -30,7 +30,7 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.M9'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.RC1'
 	}
 }
 
