--- a/complete/eureka-client/src/main/resources/bootstrap.properties
+++ b/complete/eureka-client/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
 spring.application.name=a-bootiful-client
-
+server.port=8083
+eureka.client.service-url.defaultZone=http://myaseen.atypon.com:8081/eureka
+eureka.instance.prefer-ip-address=true
