--- a/complete/eureka-client/pom.xml
+++ b/complete/eureka-client/pom.xml
@@ -63,4 +63,12 @@
 		</plugins>
 	</build>
 
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
+
 </project>
