--- a/complete/eureka-service/build.gradle
+++ b/complete/eureka-service/build.gradle
@@ -30,7 +30,7 @@ repositories {
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.SR2'
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE'
 	}
 }
 
