--- a/servicea/build.gradle
+++ b/servicea/build.gradle
@@ -1,8 +1,9 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.0'
-	id 'io.spring.dependency-management' version '1.1.5'
 }
+
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -18,7 +19,7 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2023.0.2")
+	springCloudVersion = "2023.0.2"
 }
 
 dependencies {
