--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,9 @@ updates:
       - "/serviceb"
     ignore:
       - dependency-name: "*"
-        update-types: ["version-update:semver-patch"]
+        update-types:
+          - version-update:semver-major
+          - version-update:semver-minor
     schedule:
       interval: "monthly"
     target-branch: "main"
@@ -24,7 +26,9 @@ updates:
       - "/serviceb"
     ignore:
       - dependency-name: "*"
-        update-types: ["version-update:semver-patch"]
+        update-types:
+          - version-update:semver-major
+          - version-update:semver-minor
     schedule:
       interval: "monthly"
     target-branch: "main"
